// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Pruebas en la aplicacion de <GifExpertApp /> comparar contra el snapshot 1`] = `
<Fragment>
  <h2>
    GifexpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol />
</Fragment>
`;

exports[`Pruebas en la aplicacion de <GifExpertApp /> debe de mostrar una lista de categorias 1`] = `
<Fragment>
  <h2>
    GifexpertApp
  </h2>
  <AddCategory
    setCategories={[Function]}
  />
  <hr />
  <ol>
    <GifGrid
      category="dragon ball"
      key="dragon ball"
    />
    <GifGrid
      category="batman"
      key="batman"
    />
  </ol>
</Fragment>
`;
